fix layout problems

--- a/styles/components/column-3.css
+++ b/styles/components/column-3.css
@@ -3,15 +3,7 @@
 }
 
 #timer > h2{
-  font-size: 8rem;
-  line-height: 1;
   text-align: center;
-}
-
-@media (max-width: 768px) {
-  #timer > h2 {
-    font-size: 4rem;
-  }
 }
 
 #score {
