--- a/styles/utils.css
+++ b/styles/utils.css
@@ -2,13 +2,13 @@
   --grid-width: calc(var(--vh, 1vh) * 60);
 }
 
-@media (max-width: 1100px) {
+@media (max-width: 1100px) and (min-height: 500px){
   :root {
     --grid-width: calc(var(--vh, 1vh) * 34);
   }
 }
 
-@media (max-width: 768px) {
+@media (max-width: 768px) and (min-height: 500px) {
   :root {
     --grid-width: calc(var(--vh, 1vh) * 30);
   }
